--- a/Cardna-iOS/Cardna-iOS/Source/AppSources/AppXibs/CardCollectionViewCell.xib
+++ b/Cardna-iOS/Cardna-iOS/Source/AppSources/AppXibs/CardCollectionViewCell.xib
@@ -46,12 +46,12 @@
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="0.49690663426143483" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tfo-MZ-vUo">
-                                <rect key="frame" x="266.5" y="367.5" width="20.5" height="20.5"/>
+                                <rect key="frame" x="261" y="337.5" width="20" height="20"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="   " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vJG-uo-g2b">
-                                        <rect key="frame" x="0.0" y="0.0" width="20.5" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="   " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vJG-uo-g2b">
+                                        <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" systemColor="systemYellowColor"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
@@ -59,6 +59,7 @@
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="vJG-uo-g2b" secondAttribute="trailing" id="Ps3-cs-EWO"/>
                                     <constraint firstItem="vJG-uo-g2b" firstAttribute="leading" secondItem="tfo-MZ-vUo" secondAttribute="leading" id="aB7-p4-Fek"/>
+                                    <constraint firstAttribute="width" constant="20" id="fgA-v5-aTY"/>
                                     <constraint firstItem="vJG-uo-g2b" firstAttribute="top" secondItem="tfo-MZ-vUo" secondAttribute="top" id="i1M-DL-Ytq"/>
                                     <constraint firstAttribute="width" secondItem="tfo-MZ-vUo" secondAttribute="height" id="pQH-ZX-oAQ"/>
                                     <constraint firstAttribute="bottom" secondItem="vJG-uo-g2b" secondAttribute="bottom" id="tHs-IB-v6P"/>
@@ -67,14 +68,13 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="tfo-MZ-vUo" firstAttribute="top" secondItem="oWS-dP-mEt" secondAttribute="top" id="0rl-wb-kNI"/>
                             <constraint firstItem="oWS-dP-mEt" firstAttribute="top" secondItem="mNn-Nw-OPg" secondAttribute="bottom" constant="5" id="2vl-uB-OQt"/>
                             <constraint firstItem="mNn-Nw-OPg" firstAttribute="leading" secondItem="W9a-lj-jng" secondAttribute="leading" constant="10" id="5Ff-4I-zWo"/>
-                            <constraint firstAttribute="trailing" secondItem="tfo-MZ-vUo" secondAttribute="trailing" constant="10" id="8kq-oY-Fk1"/>
+                            <constraint firstItem="oWS-dP-mEt" firstAttribute="top" secondItem="tfo-MZ-vUo" secondAttribute="bottom" constant="10" id="645-DF-FD5"/>
                             <constraint firstItem="lGG-o4-CeF" firstAttribute="top" secondItem="W9a-lj-jng" secondAttribute="top" id="LZK-gm-foO"/>
                             <constraint firstItem="lGG-o4-CeF" firstAttribute="leading" secondItem="W9a-lj-jng" secondAttribute="leading" id="Px1-px-mYK"/>
                             <constraint firstItem="mNn-Nw-OPg" firstAttribute="height" secondItem="W9a-lj-jng" secondAttribute="height" multiplier="0.86" id="TxN-o9-Q2f"/>
-                            <constraint firstItem="tfo-MZ-vUo" firstAttribute="centerY" secondItem="oWS-dP-mEt" secondAttribute="centerY" id="WSD-9A-KkW"/>
+                            <constraint firstAttribute="trailing" secondItem="tfo-MZ-vUo" secondAttribute="trailing" constant="16" id="WDR-DI-A1b"/>
                             <constraint firstAttribute="bottom" secondItem="lGG-o4-CeF" secondAttribute="bottom" id="eaH-iU-Ltc"/>
                             <constraint firstItem="mNn-Nw-OPg" firstAttribute="top" secondItem="W9a-lj-jng" secondAttribute="top" constant="10" id="g5B-rv-VUT"/>
                             <constraint firstItem="oWS-dP-mEt" firstAttribute="leading" secondItem="W9a-lj-jng" secondAttribute="leading" constant="20" id="kAz-5l-UXx"/>
@@ -113,9 +113,6 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemYellowColor">
-            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
