[#116] 마이페이지 디테일 잡기

--- a/Cardna-iOS/Cardna-iOS/Source/Scene/CardNotYetBox/CardNotYetBox.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/CardNotYetBox/CardNotYetBox.storyboard
@@ -10,7 +10,7 @@
         <!--Card Not Yet Box View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController storyboardIdentifier="CardNotYetBoxViewController" id="Y6W-OH-hqX" customClass="CardNotYetBoxViewController" customModule="Cardna_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CardNotYetBoxViewController" hidesBottomBarWhenPushed="YES" id="Y6W-OH-hqX" customClass="CardNotYetBoxViewController" customModule="Cardna_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -32,6 +32,9 @@
                                         <color key="tintColor" red="0.8784313725490196" green="0.8784313725490196" blue="0.8784313725490196" alpha="1" colorSpace="calibratedRGB"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="xmark" catalog="system"/>
+                                        <connections>
+                                            <action selector="closeButtonDidTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="c2N-AP-FjG"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -45,7 +48,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="egt-4E-gQO">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
@@ -56,7 +59,7 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="egt-4E-gQO" secondAttribute="trailing" id="EeM-TG-cNy"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="tBh-TJ-c1v" secondAttribute="trailing" id="S2g-A9-2DB"/>
                             <constraint firstItem="tBh-TJ-c1v" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="cof-B5-lgK"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="egt-4E-gQO" secondAttribute="bottom" id="jEU-sY-jZM"/>
+                            <constraint firstAttribute="bottom" secondItem="egt-4E-gQO" secondAttribute="bottom" id="jEU-sY-jZM"/>
                             <constraint firstItem="egt-4E-gQO" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="kqd-JO-496"/>
                             <constraint firstItem="tBh-TJ-c1v" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="vWf-lu-dVg"/>
                         </constraints>
