--- a/Cardna-iOS/Cardna-iOS/Source/Scene/CardDetail/CardDetail.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/CardDetail/CardDetail.storyboard
@@ -119,6 +119,9 @@
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="icbtBoxbackPurple"/>
+                                <connections>
+                                    <action selector="backButtonDidTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="zeU-zY-h8M"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kdK-yl-wQp">
                                 <rect key="frame" x="16" y="482" width="382" height="22"/>
@@ -151,6 +154,9 @@
                                 <buttonConfiguration key="configuration" style="plain" title="카드너 만들기">
                                     <fontDescription key="titleFontDescription" name="Pretendard-SemiBold" family="Pretendard" pointSize="20"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="makeCardButtonDidTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="GxZ-m5-7Xl"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
