--- a/Cardna-iOS/Cardna-iOS/Source/Scene/CardNotYetBox/CardNotYetBox.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/CardNotYetBox/CardNotYetBox.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
@@ -64,6 +64,7 @@
                             <constraint firstItem="tBh-TJ-c1v" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="vWf-lu-dVg"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="pt4-dD-7ES"/>
                     <connections>
                         <outlet property="navigationTitleLabel" destination="XNS-vA-9dU" id="jRM-5h-xfs"/>
                         <outlet property="tableView" destination="egt-4E-gQO" id="MbP-pS-b7l"/>
@@ -71,7 +72,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="113" y="81"/>
+            <point key="canvasLocation" x="1021.7391304347827" y="80.357142857142847"/>
         </scene>
     </scenes>
     <resources>
