--- a/Cardna-iOS/Cardna-iOS/Source/Scene/AddCard/AddCardBottomSheet.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/AddCard/AddCardBottomSheet.storyboard
@@ -24,6 +24,9 @@
                                         <rect key="frame" x="341" y="30" width="49" height="31"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="완료"/>
+                                        <connections>
+                                            <action selector="touchUpCompletedButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="lnR-4t-Mlz"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="심볼" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aUq-qE-Ou1">
                                         <rect key="frame" x="24" y="61" width="30" height="21"/>
@@ -91,8 +94,8 @@
                                             <action selector="albumBtn:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="EeQ-eL-jww"/>
                                         </connections>
                                     </button>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="njT-u9-LgW">
-                                        <rect key="frame" x="24" y="222" width="29" height="26.5"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icGallery" translatesAutoresizingMaskIntoConstraints="NO" id="njT-u9-LgW">
+                                        <rect key="frame" x="24" y="221" width="29" height="29"/>
                                         <color key="tintColor" red="0.8784313725490196" green="0.8784313725490196" blue="0.8784313725490196" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="29" id="ATq-Is-PLb"/>
@@ -151,8 +154,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="icGallery" width="28" height="28"/>
         <image name="icbtSymbolClover" width="52" height="52"/>
-        <image name="photo" catalog="system" width="128" height="93"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
