--- a/Cardna-iOS/Cardna-iOS/Source/Scene/CardNotYetBox/CardNotYetBox.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/CardNotYetBox/CardNotYetBox.storyboard
@@ -31,7 +31,7 @@
                                         </constraints>
                                         <color key="tintColor" red="0.8784313725490196" green="0.8784313725490196" blue="0.8784313725490196" alpha="1" colorSpace="calibratedRGB"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" image="xmark" catalog="system"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="icbtBack"/>
                                         <connections>
                                             <action selector="closeButtonDidTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="c2N-AP-FjG"/>
                                         </connections>
@@ -76,6 +76,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="xmark" catalog="system" width="128" height="113"/>
+        <image name="icbtBack" width="42" height="42"/>
     </resources>
 </document>
